Extract Menu to new library

--- a/libs/ui-menu/src/lib/menu/menu.component.html
+++ b/libs/ui-menu/src/lib/menu/menu.component.html
@@ -1,1 +1,19 @@
-<p>menu works!</p>
+<mat-sidenav-container hasBackdrop autosize>
+  <mat-sidenav mode="side" #sidenav>
+    <div class="menu-item">
+      <span class="filler"></span>
+      <button mat-icon-button (click)="sidenav.close()">
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
+    <button mat-raised-button color="primary">TODOs</button>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>Travel App</span>
+    </mat-toolbar>
+  </mat-sidenav-content>
+</mat-sidenav-container>
