--- a/libs/ui-menu/src/lib/menu/menu.component.html
+++ b/libs/ui-menu/src/lib/menu/menu.component.html
@@ -15,5 +15,7 @@
       </button>
       <span>Travel App</span>
     </mat-toolbar>
+
+    <ng-content></ng-content>
   </mat-sidenav-content>
 </mat-sidenav-container>
