Introduce lazy loaded module for page

--- a/apps/travel-app/src/app/sign-in/sign-in.component.html
+++ b/apps/travel-app/src/app/sign-in/sign-in.component.html
@@ -1,2 +1,8 @@
-<p>Welcome to Travel App</p>
-<p>sign-in works!</p>
+<div class="container">
+  <p>Welcome to Travel App</p>
+
+  <input type="text" />
+  <input type="password" />
+
+  <input type="button" value="Log in" />
+</div>
