--- a/apps/travel-app/src/app/sign-in/sign-in.component.html
+++ b/apps/travel-app/src/app/sign-in/sign-in.component.html
@@ -1,8 +1,15 @@
 <div class="container">
   <p>Welcome to Travel App</p>
 
-  <input type="text" />
-  <input type="password" />
+  <mat-form-field>
+    <mat-label>Username</mat-label>
+    <input matInput />
+  </mat-form-field>
 
-  <input type="button" value="Log in" />
+  <mat-form-field>
+    <mat-label>Password</mat-label>
+    <input matInput type="password" />
+  </mat-form-field>
+
+  <button mat-raised-button color="primary" type="button">Log In</button>
 </div>
