--- a/apps/travel-app/src/app/sign-in/sign-in.component.html
+++ b/apps/travel-app/src/app/sign-in/sign-in.component.html
@@ -1,15 +1,24 @@
 <div class="container">
   <p>Welcome to Travel App</p>
 
-  <mat-form-field>
-    <mat-label>Username</mat-label>
-    <input matInput />
-  </mat-form-field>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <mat-form-field>
+      <mat-label>Username</mat-label>
+      <input matInput formControlName="username" />
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>Password</mat-label>
-    <input matInput type="password" />
-  </mat-form-field>
+    <mat-form-field>
+      <mat-label>Password</mat-label>
+      <input matInput type="password" formControlName="password" />
+    </mat-form-field>
 
-  <button mat-raised-button color="primary" type="button">Log In</button>
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="!loginForm.valid"
+    >
+      Log In
+    </button>
+  </form>
 </div>
