--- a/apps/travel-app/src/app/sign-in/sign-in.component.scss
+++ b/apps/travel-app/src/app/sign-in/sign-in.component.scss
@@ -6,4 +6,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  form {
+    display: flex;
+    flex-direction: column;
+
+    @media screen and (max-width: 425px) {
+      width: 90%;
+    }
+  }
 }
