--- a/apps/travel-app/src/app/sign-in/sign-in.component.scss
+++ b/apps/travel-app/src/app/sign-in/sign-in.component.scss
@@ -14,5 +14,9 @@
     @media screen and (max-width: 425px) {
       width: 90%;
     }
+
+    @media screen and (min-width: 425px) {
+      width: 320px;
+    }
   }
 }
