--- a/libs/ui-menu/src/lib/menu/menu.component.html
+++ b/libs/ui-menu/src/lib/menu/menu.component.html
@@ -20,6 +20,8 @@
       <span>Travel App</span>
     </mat-toolbar>
 
-    <ng-content></ng-content>
+    <div class="content">
+      <ng-content></ng-content>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
