--- a/libs/ui-menu/src/lib/menu/menu.component.scss
+++ b/libs/ui-menu/src/lib/menu/menu.component.scss
@@ -13,3 +13,18 @@
 .filler {
   flex: 1 1 auto;
 }
+
+.mat-toolbar {
+  position: sticky;
+  top: 0;
+}
+
+.content {
+  @media screen and (max-width: 424px) {
+    height: calc(100% - 56px);
+  }
+
+  @media screen and (min-width: 425px) {
+    height: calc(100% - 64px);
+  }
+}
