--- a/apps/travel-app/src/app/sign-in/sign-in.component.scss
+++ b/apps/travel-app/src/app/sign-in/sign-in.component.scss
@@ -6,4 +6,43 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  form {
+    display: flex;
+    flex-direction: column;
+
+    @media screen and (max-width: 424px) {
+      width: 90%;
+    }
+
+    @media screen and (min-width: 425px) {
+      width: 320px;
+    }
+  }
+
+  .action-bar {
+    display: flex;
+
+    @media screen and (max-width: 424px) {
+      flex-direction: column-reverse;
+
+      :first-child {
+        margin-top: 8px;
+      }
+    }
+
+    @media screen and (min-width: 425px) {
+      flex-direction: row;
+
+      :first-child {
+        margin-right: 4px;
+      }
+    }
+
+    justify-content: space-between;
+
+    > * {
+      flex: 1;
+    }
+  }
 }
